# Argoss

./: .env.example  .gitignore  1.bat  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QUICKSTART_V2.md  QUICK_START.md  README.md  README_HEADER_V2.md  RELEASE_CHECKLIST.md  REPORT.md  __init__.py  agent.py  ardware_intel.py  argos_colab.ipynb  auto_integrator.py  build.py  build_exe.py  buildozer.spec  bump_version.py  colab_start.sh  colibri_daemon.py  consciousness.py  consciousness_patch_cell.py  core.py  dag_agent.py  docker-compose.yml  empathy_engine.py  git_ops.py  hardware_intel.py  kivy_1gui.py  life_support_patch.py  life_v2_patch.py  main.py  main_kivy.py  pack_archive.py  pyproject.toml  requirements-optional.txt  requirements.txt  (+3 more)
.github/workflows/: android-apk.yml  argos_evolution_publish.yml  argos_report_to_gist.yml  build_apk.yml  build_windows.yml  ci.yml  docker.yml  publish_pypi.yml  publish_testpypi.yml  release.yml  status_report.yml
Argosss-main/: .env.example  argos.spec  budding_manager.py  buildozer.spec  colab_start.sh  event_bus.py  git_push.py  pyproject.toml  requirements.txt  smart_systems.py  status_report.py
Argosss-main/.github/workflows/: auto_push.yml  build_windows.yml  ci.yml  release.yml
Argosss-main/assets/: colibri.service
Argosss-main/src/: ai_providers.py  argos_model.py  awa_core.py  context_manager.py  core.py  db_init.py  device_scanner.py  empathy_engine.py  infrastructure.py  memory.py  platform_admin.py  pricing.py  task_queue.py  thought_book.py
Argosss-main/src/connectivity/: air_snitch.py  android_service.py  gost_p2p.py  p2p_bridge.py  p2p_transport.py  sensor_bridge.py  whatsapp_bridge.py  whisper_node.py  wifi_sentinel.py  xai_tts.py
Argosss-main/src/core/: __init__.py
Argosss-main/src/interface/: kivy_gui.py  sovereign_node.py  web_dashboard.py  web_engine.py
Argosss-main/src/quantum/: logic.py  oracle.py
Argosss-main/src/security/: encryption.py  gost_cipher.py  master_auth.py
Argosss-main/src/skills/: browser_conduit.py  firmware_examples.py  hardware_intel.py
Argosss-main/src/skills/crypto_monitor/: skill.py
Argosss-main/tests/: test_argoscore_functions.py  test_browser_conduit.py  test_messenger_bridges.py
colab/: ARGOS_Colab_Launch.ipynb
config/: scheduled_tasks.json
examples/scenarios/: greenhouse_stability.json  security_incident_response.json  smart_home_monitor.json
installer/: argos_setup.iss
src/: adaptive_drafter.py  admin.py  argos_logger.py  argos_model.py  argos_os_builder.py  consciousness.py  event_bus.py  firmware_builder.py  hardware_guard.py  icon_generator.py  jarvis_engine.py  launch_config.py  life_support.py  life_support_v2.py  master_prompts.py  pupi_ops.py  self_healing.py  server_rental.py  skill_loader.py  tool_calling.py
src/connectivity/: browser_conduit.py  budding_manager.py  cloud_object_storage.py  colibri_daemon.py  iot_emulator.py  max_bridge.py  messenger_router.py  otg_manager.py  power_sentry.py  slack_bridge.py  smarthome_override.py  spatial.py  telegram_bot.py  wake_word.py  xen_argo_transport.py
src/core/: __init__.py
src/factory/: firmware_tools.py  flasher.py  replicator.py
src/interface/: __init__.py  argos_shell.py  auto_integrator.py  fastapi_dashboard.py  gui.py  kivy_1gui.py  kivy_ma.py  kivy_remote_ui.py  streamlit_dashboard.py
src/interface/legacy/: __init__.py  kivy_ma.py  main_kivy.py
src/knowledge/: grist_git_sync.py  grist_storage.py
src/modules/: biosphere_dag.py  biosphere_tools.py
src/quantum/: ibm_bridge.py  logic.py  watson_bridge.py
src/security/: bootloader_manager.py  container_isolation.py  emergency_purge.py  git_guard.py  git_ops.py  zkp.py
src/skills/: evolution.py  network_shadow.py  tasmota_updater.py
tests/: test_awareness.py  test_browser_conduit.py  test_hardware_intel_skill.py  test_telegram_bot_history_scope.py
