[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-universalsigtrip"
version = "1.4.0"
description = "ARGOS — децентрализованная автономная ИИ-система"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    'ibm-watsonx-ai>=1.3.42,<1.4.0; python_version < "3.11"',
    'ibm-watsonx-ai>=1.4.2; python_version >= "3.11"',
    "ollama>=0.4.9",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.40.0",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
    "py7zr>=0.22.0",
    "packaging>=23.0",
    "networkx>=3.2.1",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "faster-whisper>=1.0.3",
    "customtkinter>=5.2.0",
    "pyserial>=3.5",
    "paho-mqtt>=2.0.0",
]

[project.scripts]
argos = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
